<resources>
    <string name="app_name">Child Learning</string>
    <string name="action_settings">Settings</string>
    <string name="todol">TODO</string>
    <string name="todool">TODO</string>
    <string name="todoool">TODO</string>
    <string name="todooool">TODO</string>
    <string name="todoooool">TODO</string>
    <string name="todooooool">TODO</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="todooo">TODO</string>
    <string name="todoooo">TODO</string>
    <string name="todooooo">TODO</string>
    <string name="todoooooo">TODO</string>
    <string name="todot">TODO</string>
    <string name="todoot">TODO</string>
    <string name="todooot">TODO</string>
    <string name="todoooot">TODO</string>
    <string name="todooooot">TODO</string>
    <string name="todoooooot">TODO</string>
    <string name="todotl">TODO</string>
    <string name="todootl">TODO</string>
    <string name="todoootl">TODO</string>
    <string name="todooootl">TODO</string>
    <string name="todoooootl">TODO</string>
    <string name="todooooootl">TODO</string>
    <string name="pro">উচ্চারণ</string>
    <string name="dd">dd</string>
    <string name="proo">TODO</string>
    <string name="todog">TODO</string>
    <string name="todoh">TODO</string>
    <string name="ddv">dd</string>
    <string name="o">উচ্চারণ</string>
    <string name="todoi">TODO</string>
    <string name="todor">TODO</string>
    <string name="todoui">TODO</string>
    <string name="ddh">dd</string>
    <string name="gh">উচ্চারণ</string>
    <string name="todogh">TODO</string>
    <string name="tododh">TODO</string>
    <string name="tododgh">TODO</string>
    <string name="ddfj">dd</string>
    <string name="jhf">উচ্চারণ</string>
    <string name="todohgd">TODO</string>
    <string name="todosf">TODO</string>
    <string name="todogf">TODO</string>
    <string name="ddjfl">dd</string>
    <string name="ad">উচ্চারণ</string>
    <string name="todoad">TODO</string>
    <string name="todoadg">TODO</string>
    <string name="todof">TODO</string>
    <string name="fd">dd</string>
    <string name="fdb">উচ্চারণ</string>
    <string name="fgbx">TODO</string>
    <string name="fgbbx">TODO</string>
    <string name="shf">TODO</string>
    <string name="fgbs">dd</string>
    <string name="ju">উচ্চারণ</string>
    <string name="dhgh">TODO</string>
    <string name="gnr">TODO</string>
    <string name="teyjj">TODO</string>
    <string name="ygs">dd</string>
    <string name="t">উচ্চারণ</string>
    <string name="tyt">TODO</string>
    <string name="dht">TODO</string>
    <string name="rth">TODO</string>
    <string name="privacy_policy_details">PRIVACY POLICY\n\n
Tools and Technique built the Child learning - with animals and birds app as a Free app. This SERVICE is provided by at no cost and is intended for use as is.
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Child learning - with animals and birds unless otherwise defined in this Privacy Policy.
\n\nInformation Collection and Use\n\n
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Nothing. The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
Google Play Services\n\n
Log Data\n\n
I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n\nCookies\n\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
\n\nService Providers\n\n
I may employ third-party companies and individuals due to the following reasons:
\n\nTo facilitate our Service;
\n\nTo provide the Service on our behalf;
\n\nTo perform Service-related services; or
\n\nTo assist us in analyzing how our Service is used.
\n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n\nSecurity
\n\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n\nLinks to Other Sites
\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
\n\nChildren’s Privacy
\n\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
\n\nChanges to This Privacy Policy
\n\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
\n\nContact Us

\n\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at \n\ninform.fagent@gmail.com. </string>
    <string name="privacy_policy">privacy policy</string>
</resources>