<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F4C3"
    tools:context="com.maria.user_pc.gridview.AnimalSingleViewActivity">


    <ImageView android:id="@+id/AnimalSingleView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/proo" />
    <TextView
        android:id="@+id/AnimalTVSingleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dd"
        android:textSize="40sp"
        android:layout_below="@+id/AnimalSingleView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/animalbtnPronountiation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pronountiationbtnshape"
        android:text="@string/pro"
        android:textSize="20sp"
        android:onClick="AnimalPronountiation"
        android:layout_alignTop="@+id/Animalbtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp" />

    <ImageButton
        android:id="@+id/Animalbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AnimalSound"
        android:src="@mipmap/audioicon"
        android:background="@null"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButton10"
        android:layout_toEndOf="@+id/imageButton10"
        android:contentDescription="@string/todog" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/backbtn"
        android:background="@null"
        android:onClick="backtoAnimalGridV"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_alignTop="@+id/Animalbtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageButton10"
        android:contentDescription="@string/todoh" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7036610474547852/5458427194"></com.google.android.gms.ads.AdView>

</RelativeLayout>
